2024-03-19 Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* data/pythia8_Zq_vshort.dat:   *** ADDED ***
	added this file, as needed for validation of the new 
	JetFlav contrib.

2024-02-29  Gregory Soyez  <soyez@fastjet.fr>

	* contribs.svn:
	* NEWS:
	updated Nsubjettiness to 2.3.2 to fix unsigned int warning
	in example_advanced_usage

2024-02-28 Wed  <gavin.salam@physics.ox.ac.uk>

	* contribs.svn:
	* NEWS:
	updated Nsubjettiness to 2.3.1 to fix unsigned int warning
	in AxesDefinition.hh

2024-02-26 Mon  <gavin.salam@physics.ox.ac.uk>

	* VERSION:
	* NEWS:
	preparing for release of 1.054

2024-02-26 Mon  <gavin.salam@physics.ox.ac.uk>

	* Makefile.in:
	* utils/check.sh: 
	fixed an issue where a failure in one of the checks
	did not result in a non-zero exit code for make check.
	Also aligned output in summary.

	* contribs.svn:
	updated RecursiveTools to 2.0.2, EnergyCorrelator to 1.3.2,
	Nsubjettiness to 2.3.0

	* scripts/internal/common.sh:
	* scripts/internal/release-fjcontrib.sh:
	this now searches explicitly for gnu tar rather than just tar
	(which could be a BSD tar on macs, and which gives tarballs
	that are not very Linux friendly, reported by Ezra Lesser).

2024-02-21 Wed  <gavin.salam@physics.ox.ac.uk>

	* contribs.svn:
	* configure:
	added SignalFreeBackgroundEstimator v1.0.0 and updated configure script
	so that it allows for longer contrib names in its summary output.

	* NEWS:
	started preparation of release notes for 1.054

2024-02-01  Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* contribs.svn:
	updated LundPlane to 2.1.0

2024-01-06  Gavin Salam  <gavin.salam@physics.ox.ac.uk>

	* configure:
	added sorting of contribs, to ensure build order is reproducible,
	as requested in https://github.com/alisw/fastjet/pull/6
	and communicated to us by Stefan Bruns.

	* Makefile.in:
	sorted output from tests to ensure reproducibility

2023-09-29 Fri  <gavin.salam@physics.ox.ac.uk>

	* VERSION:
	* NEWS:
	prepared release of 1.053

	* contribs.svn: